add author info to README

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+author: huazai
+email: gesse#vip.qq.com
+
 create vpn serivce cmd: bash create_vpn #output ip, username, password
 restart vpn service cmd: vpnrestart
 close vpn service cmd: killall pptpd
